providers/oura/tests/snapshots/listing__00-list-root.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 0: list /
README.md  file  unknown  stable
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
